Revert "fix: fix navbar spacing"
This reverts commit 3da1a14d29bc4f7bded29c5ccd6abe5ae2cbc0bb.

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -142,7 +142,7 @@ button {
   .nav-menu {
     transform: translateY(-500px);
     position: absolute;
-    top: 70px;
+    top: 75px;
     left: 0;
     right: 0;
     background-color: white;
